// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CWidgetProgress matches custom props snapshot 1`] = `
<div
  class="c-card c-text-white c-bg-info"
>
  <div
    class="c-card-body"
  >
    <div
      class="c-h4 c-m-0"
    >
      test
    </div>
     
    <div>
      test
    </div>
     
    <div
      class="c-progress c-progress-xs c-my-3 c-mb-0 c-progress-white"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="30"
        class="c-progress-bar"
        role="progressbar"
        style="width: 30%;"
      >
        
      </div>
    </div>
     
    <small
      class="c-text-muted"
    >
      
      test
    
    </small>
  </div>
</div>
`;

exports[`CWidgetProgress matches default props snapshot 1`] = `
<div
  class="c-card"
>
  <div
    class="c-card-body"
  >
    <div
      class="c-h4 c-m-0"
    >
      header:string
    </div>
     
    <div>
      text:string
    </div>
     
    <div
      class="c-progress c-progress-xs c-my-3 c-mb-0"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="25"
        class="c-progress-bar"
        role="progressbar"
        style="width: 25%;"
      >
        
      </div>
    </div>
     
    <small
      class="c-text-muted"
    >
      
      footer:string
    
    </small>
  </div>
</div>
`;
